Replace deprecated Number constructions
Change-Id: I5ada34ad167c6cc1c81175863fac2c246dd7c910